Fix bg color buttons in dark mode

--- a/themes/hugoplate/assets/scss/buttons.scss
+++ b/themes/hugoplate/assets/scss/buttons.scss
@@ -8,9 +8,9 @@
 
 .btn-primary {
   @apply border-primary bg-primary dark:border-darkmode-primary dark:text-dark text-white dark:bg-white;
-  background-color:#D3AA65;
+  background-color:#D3AA65 !important;
   color:#ffffff !important;
-  border-color: #D3AA65;
+  border-color: #D3AA65 !important;
 }
 
 .btn-outline-primary {
